LA-269 fixed link underlining and contrast issue, made viewport user scalable

--- a/web/apps/water/waterworks/css/main.css
+++ b/web/apps/water/waterworks/css/main.css
@@ -80,7 +80,7 @@ button:focus {
 
 .btn {
   border: 1px solid #dce0e0;
-  color: #82888a;
+  color: #393c3d;
   transition: all 0.3s ease; }
 
 .btn-primary {
@@ -356,6 +356,13 @@ button:focus {
   @media screen and (min-width: 80em) {
     .projectDetail {
       width: 30%; } }
+
+.projectDetail a,
+.projectDetail a:active,
+.projectDetail a:hover,
+.projectDetail a:focus,
+.projectDetail a:visited {
+  text-decoration: underline; }
 
 .searchPanel {
   position: fixed;
